--- a/Envs/Air_Rocket_Data/boot.config
+++ b/Envs/Air_Rocket_Data/boot.config
@@ -1,4 +1,9 @@
+player-connection-mode=Listen
+player-connection-guid=4222881179
+player-connection-debug=0
+player-connection-project-name=stellarsim2d
+player-connection-ip=10.100.2.170
 wait-for-native-debugger=0
 hdr-display-enabled=0
 gc-max-time-slice=3
-build-guid=1921dc743e7d49d0b7b69da963b13770
+build-guid=1e09e18072de4016825175f5447be499
